@@ -1,7 +1,5 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.0' apply false
-	id 'io.spring.dependency-management' version '1.1.0' apply false
 }
 
 allprojects {
@@ -20,17 +18,31 @@ subprojects {
 
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'mysql:mysql-connector-java:8.0.32'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+		// JSON Web Token dependencies
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+		// Test dependencies
+//		testImplementation 'org.mockito:mockito-core:5.4.0'
+//		testImplementation 'org.mockito:mockito-inline:5.4.0'
+//		testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
 	}
 
-	tasks.bootJar {
-		mainClassName = 'src.main.java.com.example.AuthenticationService.AuthenticationServiceApplication'
+
+	tasks.named('bootJar') {
+		mainClassName = 'java.com.example.AuthenticationService.AuthenticationServiceApplication'
 	}
 
 	test {
 		useJUnitPlatform()
+		// JVM arguments to enable Byte Buddy experimental features for unsupported Java versions
+		jvmArgs '-Dnet.bytebuddy.experimental=true'
 	}
 }
