@@ -19,13 +19,25 @@ subprojects {
 	apply plugin: 'java'
 
 	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-		runtimeOnly 'com.h2database:h2'
+		implementation 'mysql:mysql-connector-java:8.0.32'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 		implementation 'mysql:mysql-connector-java:8.0.32' // Replace with the latest version
 
+		// JSON Web Token dependencies
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+		// Test dependencies
+//		testImplementation 'org.mockito:mockito-core:5.4.0'
+//		testImplementation 'org.mockito:mockito-inline:5.4.0'
+		testImplementation 'net.bytebuddy:byte-buddy:1.14.4'
 	}
+
 
 	java {
 		sourceCompatibility = JavaVersion.VERSION_17
@@ -34,5 +46,7 @@ subprojects {
 
 	test {
 		useJUnitPlatform()
+		// JVM arguments to enable Byte Buddy experimental features for unsupported Java versions
+		jvmArgs '-Dnet.bytebuddy.experimental=true'
 	}
 }
